PR comments resolved.